--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 {
     margin: 0%;
     padding:0%;
-    box-sizing: border-box;
+    overflow-x: hidden;
 }
 a
 {
@@ -21,7 +21,7 @@ header{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    position: sticky;
+    position: fixed;
     top: 0%;
 }
 header .icon,span:hover
@@ -51,6 +51,7 @@ header button:hover{
 .container
 {
     width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -58,11 +59,11 @@ header button:hover{
 }
 .div1
 {
-    margin-top: 0.8rem;
+    margin-top: 2rem;
     margin-bottom: 0.8rem;
     padding: 0.5rem;
     background-color: rgb(240, 220, 224);
-    width: 60rem;
+    width: 58rem;
     border-radius: 15px;
 }
 .div1 h3{
@@ -82,7 +83,7 @@ header button:hover{
 }
 .grid img:hover
 {
-    background-color: rgb(244, 225, 228);
+    opacity: 0.4;
 }
 .footer
 {
@@ -93,12 +94,15 @@ header button:hover{
     align-items: center;
     margin-top: 0.8rem;
     margin-bottom: 0.8rem;
-    background-color: rgb(189, 189, 228);
+    background-image: url(./img/joshua-earle-yi6dvuynEuo-unsplash.jpg);
+    background-size:cover;
+    background-repeat: no-repeat;
     height:10rem;
+
 }
 .footer button{
     border: 2px solid #29d9d5;
-    color: #29d9d5;
+    color: #285857;
     border-radius: 15px;
     padding: 0.5em;
     background-color: #29d9d600;
