--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,35 @@ header button:hover{
     background-color: #29d9d5;
     color: black;
 }
+.last
+{
+    padding: 3rem;
+    display: flex;
+    justify-content: space-between;
+    background-color: #d7f7f8;
+}
+.btn ,input
+{
+    color: blue;
+    border-radius: 15px;
+    border: 2px solid rgb(8, 8, 51);
+    padding: 0.4rem;
+}
+.btn:hover
+{
+    background-color: #29d9d5;
+    color: black;
+}
+.l3
+{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.6em;
+}
+.l3 i{
+    color: rgb(11, 11, 238);
+}
+.l3 i:hover{
+    color: cyan;
+}
