--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,8 @@ header button:hover{
     padding: 3rem;
     display: flex;
     justify-content: space-between;
-    background-color: #d7f7f8;
+    background-color: #000606;
+    color: white;
 }
 .btn ,input
 {
@@ -136,11 +137,24 @@ header button:hover{
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 0.6em;
+    gap: 1em;
 }
 .l3 i{
-    color: rgb(11, 11, 238);
+    color: rgb(73, 209, 247);
 }
 .l3 i:hover{
-    color: cyan;
+    color: rgb(16, 35, 245);
+}
+.i{
+    width: 15rem;
+    display: flex;
+    justify-content: space-between;
+}
+.abc
+{
+    border: 2px solid aqua;
+    border-radius: 50%;
+    padding:1rem;
+    display: flex;
+    justify-content: center;
 }
